welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:33: error: not found: value x
setCouleurBrosse(tab((j+x)%n))
                        ^